static site generating, need colors

--- a/src/about/index.html
+++ b/src/about/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>About - InterVolz</title>
-    <link rel="stylesheet" href="css/main.css">
+    <title>InterVolz About</title>
+    <link rel="stylesheet" href="/css/main.css">
     <!-- Add any head elements like CSS links -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -23,6 +23,7 @@
         </div>
     </header>
     <main>
+        <section>
         <h2>ABOUT</h2>
 <p>Hello, I'm Maxwell, a 34 year old software engineer living in San Francisco.</p>
 <p>I am passionate about computers. Currently, I automate various systems from bare metal to graphical dashboards using Python, and for fun I also like to write Python and JavaScript to make various systems and create.</p>
@@ -50,6 +51,7 @@
 <li>Express</li>
 </ul>
  <!-- This is where the Markdown content will be injected -->
+        </section>
     </main>
     <footer>
         <!-- Your site's footer content -->
