dark theme enabled, some funkiness as expected

--- a/src/about/index.html
+++ b/src/about/index.html
@@ -25,8 +25,8 @@
     <main>
         <section>
         <h2>ABOUT</h2>
-<p>Hello, I'm Maxwell, a 34 year old software engineer living in San Francisco.</p>
-<p>I am passionate about computers. Currently, I automate various systems from bare metal to graphical dashboards using Python, and for fun I also like to write Python and JavaScript to make various systems and create.</p>
+<p>Hello, I’m Maxwell, a 34 year old software engineer living in San Francisco.</p>
+<p>I am passionate about computers. Currently, for work, I automate various systems from bare metal to graphical dashboards using Python. I also like to write Python and JavaScript for fun! I love making things.</p>
 <p>InterVolz is a place to formalize the rather unorganized way I have been working on projects the past decade.</p>
 <p>You can expect to see articles containing the following subjects:</p>
 <h2>TECH</h2>
