working article and styles for mobile

--- a/src/about/index.html
+++ b/src/about/index.html
@@ -7,6 +7,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@600&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Roboto:wght@900&family=Rochester&family=Saira+Stencil+One&display=swap" rel="stylesheet">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
     <header>
@@ -24,18 +26,18 @@
     </header>
     <main>
         <section>
-        <h2>ABOUT</h2>
+        <h2 id="about" tabindex="-1"><a class="header-anchor" href="#about">ABOUT</a></h2>
 <p>Hello, I’m Maxwell, a 34 year old software engineer living in San Francisco.</p>
 <p>I am passionate about computers. Currently, for work, I automate various systems from bare metal to graphical dashboards using Python. I also like to write Python and JavaScript for fun! I love making things.</p>
 <p>InterVolz is a place to formalize the rather unorganized way I have been working on projects the past decade.</p>
 <p>You can expect to see articles containing the following subjects:</p>
-<h2>TECH</h2>
+<h2 id="tech" tabindex="-1"><a class="header-anchor" href="#tech">TECH</a></h2>
 <ul>
 <li>Software Engineering</li>
 <li>Silicon Valley</li>
 <li>The Internet</li>
 </ul>
-<h2>LANGUAGES</h2>
+<h2 id="languages" tabindex="-1"><a class="header-anchor" href="#languages">LANGUAGES</a></h2>
 <ul>
 <li>Python</li>
 <li>JavaScript</li>
@@ -43,7 +45,7 @@
 <li>SQL</li>
 <li>Unix</li>
 </ul>
-<h2>FRAMEWORKS</h2>
+<h2 id="frameworks" tabindex="-1"><a class="header-anchor" href="#frameworks">FRAMEWORKS</a></h2>
 <ul>
 <li>Jenkins</li>
 <li>Docker</li>
