--- a/src/about/index.html
+++ b/src/about/index.html
@@ -3,11 +3,13 @@
 <head>
     <title>InterVolz About</title>
     <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/css/about.css">
     <!-- Add any head elements like CSS links -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@600&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Roboto:wght@900&family=Rochester&family=Saira+Stencil+One&display=swap" rel="stylesheet">
 
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
@@ -16,18 +18,20 @@
             <!-- Navigation links -->
             <a href="/">~</a> <a href="/archive">~/archive</a> <a href="/tags">~/tags</a> <a href="/about">~/about</a>
         </nav>
-        <h1 class="title">InterVolz</h1>
-        <div class="social-links">
-            <!-- Social media links -->
-            <a href="#">Github</a>
-            <!-- <a href="#">Twitter</a> -->
-            <!-- <a href="#">Stack Overflow</a> -->
-        </div>
     </header>
-    <main>
+    <main class="content">
+        <section class="profile">
+            <h1 class="title">InterVolz</h1>
+            <div class="social-links">
+                <!-- Social media links -->
+                <a href="https://github.com/InterVolz">Github</a>
+                <!-- <a href="#">Twitter</a> -->
+                <!-- <a href="#">Stack Overflow</a> -->
+            </div>
+        </section>
         <section>
         <h2 id="about" tabindex="-1"><a class="header-anchor" href="#about">ABOUT</a></h2>
-<p>Hello, I’m Maxwell, a 34 year old software engineer living in San Francisco.</p>
+<p>Hello, I am Maxwell, a 34 year old software engineer living in San Francisco.</p>
 <p>I am passionate about computers. Currently, for work, I automate various systems from bare metal to graphical dashboards using Python. I also like to write Python and JavaScript for fun! I love making things.</p>
 <p>InterVolz is a place to formalize the rather unorganized way I have been working on projects the past decade.</p>
 <p>You can expect to see articles containing the following subjects:</p>
